Add Li Docker image, update Vagrant base box to Li
Builds/configures ODL Docker images via the same pipeline used by
Packer when creating Vagrant base boxes.

Upgrades the Vagrant base box to Lithium, mostly for free via updates
to the Ansible role.

Starts with a recent, fresh CentOS 7 image, does low-level provisioning
via Kickstart, then Packer scripts, then ODL's Ansible role, which uses
ODL's CBS RPM. The result is post-processed into a Vagrant box and a
Docker image.

I did a bit of a docs update, but I need to revisit Packer's docs in
general and do more.

Change-Id: I123e416573ab079c9350998c4f4deed8d02f7568
Signed-off-by: Daniel Farrell <dfarrell@redhat.com>

--- a/packaging/packer/centos_kickstart.cfg
+++ b/packaging/packer/centos_kickstart.cfg
@@ -39,8 +39,6 @@ reboot
 
 %packages
   # Install minimal set of packages here, let provisioners (Ansible) handle them
-  @Base
-  @Core
 %end
 
 %post
@@ -64,4 +62,12 @@ reboot
   useradd vagrant -g vagrant -G wheel
   echo "vagrant" | passwd --stdin vagrant
   echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
+
+  # Everything requires the ability to run sudo without a tty
+  # Else, may see errors like "sorry, you must have a tty to run sudo"
+  # Need to do this here, before Packer reboots the VM and runs scripts,
+  # because `sudo` in the scripts fails without it. Docker also needs this
+  # (for Ansible to run `sudo`), but it doesn't run this kickstart, so it the
+  # logic must be duplicated in Docker's config script and here.
+  sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
 %end
