Bug-3075: BMP plugin integration
-integrate BMP southbound plugin with ODL karaf distribution
-added "odl-bgppcep-bmp" feature

Change-Id: I6eee9cbef9a5a4ee122325116de21ae02f0869cd
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -62,6 +62,13 @@
     </dependency>
     <dependency>
        <groupId>org.opendaylight.bgpcep</groupId>
+       <artifactId>features-bmp</artifactId>
+       <classifier>features</classifier>
+       <version>${feature.bgpcep.version}</version>
+       <type>xml</type>
+    </dependency>
+    <dependency>
+       <groupId>org.opendaylight.bgpcep</groupId>
        <artifactId>features-extras</artifactId>
        <classifier>features</classifier>
        <version>${feature.bgpcep.version}</version>
