--- a/packaging/rpm/Vagrantfile
+++ b/packaging/rpm/Vagrantfile
@@ -6,5 +6,5 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Build Vagrant box based on Fedora 21
-  config.vm.box = "chef/fedora-21"
+  config.vm.box = "chef/centos-7.0"
 end
