Applying the Helium SR4 release patch
Change-Id: I01c3e2c9921d069018c4af146110c73db116eb2f
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/distributions/pom.xml
+++ b/distributions/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.opendaylight.integration</groupId>
     <artifactId>root</artifactId>
-    <version>0.2.4-SNAPSHOT</version>
+    <version>0.2.4-Helium-SR4</version>
     <relativePath>../</relativePath>
   </parent>
   <artifactId>distributions</artifactId>
