--- a/distributions/extra/toaster/pom.xml
+++ b/distributions/extra/toaster/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.opendaylight.integration</groupId>
         <artifactId>distributions</artifactId>
-        <version>0.2.4-SNAPSHOT</version>
+        <version>0.2.4-Helium-SR4</version>
         <relativePath>../..</relativePath>
     </parent>
 
@@ -42,13 +42,13 @@
         <virgo.version>3.6.0.RELEASE</virgo.version>
         <openexi.version>0000.0002.0038.0</openexi.version>
 
-        <concepts.version>0.5.6-SNAPSHOT</concepts.version>
-        <controller.version>0.4.6-SNAPSHOT</controller.version>
-        <controller.config.version>0.2.9-SNAPSHOT</controller.config.version>
-        <controller.framework.version>0.5.4-SNAPSHOT</controller.framework.version>
-        <controller.mdsal.version>1.1.4-SNAPSHOT</controller.mdsal.version>
+        <concepts.version>0.5.6-Helium-SR4</concepts.version>
+        <controller.version>0.4.6-Helium-SR4</controller.version>
+        <controller.config.version>0.2.9-Helium-SR4</controller.config.version>
+        <controller.framework.version>0.5.4-Helium-SR4</controller.framework.version>
+        <controller.mdsal.version>1.1.4-Helium-SR4</controller.mdsal.version>
         <netconf.version>${controller.config.version}</netconf.version>
-        <yangtools.version>0.6.6-SNAPSHOT</yangtools.version>
+        <yangtools.version>0.6.6-Helium-SR4</yangtools.version>
         <jetty.version>9.2.1.v20140609</jetty.version>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -230,17 +230,17 @@
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>ietf-inet-types</artifactId>
-            <version>2010.09.24.4.4-SNAPSHOT</version>
+            <version>2010.09.24.4.4-Helium-SR4</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>ietf-yang-types</artifactId>
-            <version>2010.09.24.4.4-SNAPSHOT</version>
+            <version>2010.09.24.4.4-Helium-SR4</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>yang-ext</artifactId>
-            <version>2013.09.07.4.4-SNAPSHOT</version>
+            <version>2013.09.07.4.4-Helium-SR4</version>
         </dependency>
 
         <!-- Concepts -->
@@ -604,7 +604,7 @@
         <dependency>
             <groupId>org.opendaylight.controller.thirdparty</groupId>
             <artifactId>ganymed</artifactId>
-            <version>1.1.4-SNAPSHOT</version>
+            <version>1.1.4-Helium-SR4</version>
         </dependency>
         <dependency>
             <groupId>org.openexi</groupId>
@@ -778,7 +778,7 @@
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>osgi-brandfragment.web</artifactId>
-            <version>0.0.6-SNAPSHOT</version>
+            <version>0.0.6-Helium-SR4</version>
         </dependency>
 
         <!-- THE APPLICATION -->
