--- a/distributions/karaf/pom.xml
+++ b/distributions/karaf/pom.xml
@@ -4,15 +4,15 @@
   <parent>
       <groupId>org.opendaylight.integration</groupId>
       <artifactId>root</artifactId>
-      <version>0.3.1-SNAPSHOT</version>
+      <version>0.3.1-Lithium-SR1</version>
       <relativePath>../../</relativePath>
    </parent>
   <artifactId>distribution-karaf</artifactId>
   <packaging>pom</packaging>
 
   <properties>
-    <branding.version>1.1.1-SNAPSHOT</branding.version>
-    <karaf.resources.version>1.5.1-SNAPSHOT</karaf.resources.version>
+    <branding.version>1.1.1-Lithium-SR1</branding.version>
+    <karaf.resources.version>1.5.1-Lithium-SR1</karaf.resources.version>
   </properties>
 
   <dependencies>
@@ -97,7 +97,7 @@
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
       <artifactId>distribution.vtn-coordinator</artifactId>
-      <version>6.1.0.1-SNAPSHOT</version>
+      <version>6.1.0.1-Lithium-SR1</version>
       <type>tar.bz2</type>
       <classifier>bin</classifier>
       <exclusions>
@@ -119,7 +119,7 @@
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
       <artifactId>distribution.vtn-coordinator</artifactId>
-      <version>6.1.0.1-SNAPSHOT</version>
+      <version>6.1.0.1-Lithium-SR1</version>
       <type>txt</type>
       <classifier>README</classifier>
       <exclusions>
@@ -388,7 +388,7 @@
       <plugin>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>karaf-plugin</artifactId>
-        <version>1.5.1-SNAPSHOT</version>
+        <version>1.5.1-Lithium-SR1</version>
         <executions>
           <execution>
             <id>populate-local-repo</id>
