--- a/distributions/pom.xml
+++ b/distributions/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.opendaylight.integration</groupId>
     <artifactId>root</artifactId>
-    <version>0.3.1-SNAPSHOT</version>
+    <version>0.3.1-Lithium-SR1</version>
     <relativePath>../</relativePath>
   </parent>
   <artifactId>distributions</artifactId>
