--- a/feature-selector/pom.xml
+++ b/feature-selector/pom.xml
@@ -4,13 +4,13 @@
   <parent>
       <groupId>org.opendaylight.integration</groupId>
       <artifactId>root</artifactId>
-      <version>0.3.1-SNAPSHOT</version>
+      <version>0.3.1-Lithium-SR1</version>
       <relativePath>../</relativePath>
   </parent>
   <artifactId>feature-selector</artifactId>
   <packaging>war</packaging>
   <name>feature-selector Webapp</name>
-  <version>0.2.1-SNAPSHOT</version>
+  <version>0.2.1-Lithium-SR1</version>
   <properties>
       <jackson.version>1.9.10</jackson.version>
       <jstl.version>1.1.2</jstl.version>
