--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>odlparent</artifactId>
-    <version>1.5.1-Lithium-SR1</version>
+    <version>1.5.2-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opendaylight.integration</groupId>
   <artifactId>root</artifactId>
-  <version>0.3.1-Lithium-SR1</version>
+  <version>0.3.2-SNAPSHOT</version>
   <name>integration</name> <!-- Used by Sonar to set project name -->
   <packaging>pom</packaging>
   <url>https://wiki.opendaylight.org/view/CrossProject:Integration_Group</url>
@@ -21,44 +21,44 @@
   </scm>
   <properties>
     <!-- Keep this list sorted alphabetically please -->
-    <didm.version>0.1.1-Lithium-SR1</didm.version>
-    <feature.adsal.version>0.9.1-Lithium-SR1</feature.adsal.version>
-    <feature.alto.version>0.1.1-Lithium-SR1</feature.alto.version>
-    <feature.bgpcep.version>0.4.1-Lithium-SR1</feature.bgpcep.version>
-    <feature.capwap.version>0.1.1-Lithium-SR1</feature.capwap.version>
-    <feature.coretutorials.version>1.0.1-Lithium-SR1</feature.coretutorials.version>
-    <feature.dlux.version>0.2.1-Lithium-SR1</feature.dlux.version>
-    <feature.flow.version>1.2.1-Lithium-SR1</feature.flow.version>
-    <feature.groupbasedpolicy.version>0.2.1-Lithium-SR1</feature.groupbasedpolicy.version>
-    <feature.iotdm.version>0.0.2-Lithium-SR1</feature.iotdm.version>
-    <feature.lacp.version>1.0.1-Lithium-SR1</feature.lacp.version>
-    <feature.lispflowmapping.version>1.2.1-Lithium-SR1</feature.lispflowmapping.version>
-    <feature.mdsal.version>1.2.1-Lithium-SR1</feature.mdsal.version>
-    <feature.nic.version>1.0.1-Lithium-SR1</feature.nic.version>
-    <feature.nsf.version>0.5.1-Lithium-SR1</feature.nsf.version>
-    <feature.neutron.version>0.5.1-Lithium-SR1</feature.neutron.version>
-    <feature.openflowplugin.version>0.1.1-Lithium-SR1</feature.openflowplugin.version>
-    <feature.ovsdb.openstack.version>1.1.1-Lithium-SR1</feature.ovsdb.openstack.version>
-    <feature.ovsdb.version>1.1.1-Lithium-SR1</feature.ovsdb.version>
-    <feature.packetcable.version>1.2.1-Lithium-SR1</feature.packetcable.version>
-    <feature.reservation.version>1.0.1-Lithium-SR1</feature.reservation.version>
-    <feature.sfc.version>0.1.1-Lithium-SR1</feature.sfc.version>
-    <feature.snbi.version>1.1.1-Lithium-SR1</feature.snbi.version>
-    <feature.snmp4sdn.version>0.2.1-Lithium-SR1</feature.snmp4sdn.version>
-    <feature.sxp.version>1.1.1-Lithium-SR1</feature.sxp.version>
-    <feature.tcpmd5.version>1.1.1-Lithium-SR1</feature.tcpmd5.version>
-    <feature.topoprocessing.version>0.0.2-Lithium-SR1</feature.topoprocessing.version>
-    <feature.tsdr.version>1.0.1-Lithium-SR1</feature.tsdr.version>
-    <feature.ttp.version>0.1.1-Lithium-SR1</feature.ttp.version>
-    <feature.usc.version>1.0.1-Lithium-SR1</feature.usc.version>
-    <feature.vpnservice.version>0.1.1-Lithium-SR1</feature.vpnservice.version>
-    <feature.vtn-manager.version>0.3.1-Lithium-SR1</feature.vtn-manager.version>
-    <feature.yangtools.version>0.7.1-Lithium-SR1</feature.yangtools.version>
+    <didm.version>0.1.2-SNAPSHOT</didm.version>
+    <feature.adsal.version>0.9.2-SNAPSHOT</feature.adsal.version>
+    <feature.alto.version>0.1.2-SNAPSHOT</feature.alto.version>
+    <feature.bgpcep.version>0.4.2-SNAPSHOT</feature.bgpcep.version>
+    <feature.capwap.version>0.1.2-SNAPSHOT</feature.capwap.version>
+    <feature.coretutorials.version>1.0.2-SNAPSHOT</feature.coretutorials.version>
+    <feature.dlux.version>0.2.2-SNAPSHOT</feature.dlux.version>
+    <feature.flow.version>1.2.2-SNAPSHOT</feature.flow.version>
+    <feature.groupbasedpolicy.version>0.2.2-SNAPSHOT</feature.groupbasedpolicy.version>
+    <feature.iotdm.version>0.0.3-SNAPSHOT</feature.iotdm.version>
+    <feature.lacp.version>1.0.2-SNAPSHOT</feature.lacp.version>
+    <feature.lispflowmapping.version>1.2.2-SNAPSHOT</feature.lispflowmapping.version>
+    <feature.mdsal.version>1.2.2-SNAPSHOT</feature.mdsal.version>
+    <feature.nic.version>1.0.2-SNAPSHOT</feature.nic.version>
+    <feature.nsf.version>0.5.2-SNAPSHOT</feature.nsf.version>
+    <feature.neutron.version>0.5.2-SNAPSHOT</feature.neutron.version>
+    <feature.openflowplugin.version>0.1.2-SNAPSHOT</feature.openflowplugin.version>
+    <feature.ovsdb.openstack.version>1.1.2-SNAPSHOT</feature.ovsdb.openstack.version>
+    <feature.ovsdb.version>1.1.2-SNAPSHOT</feature.ovsdb.version>
+    <feature.packetcable.version>1.2.2-SNAPSHOT</feature.packetcable.version>
+    <feature.reservation.version>1.0.2-SNAPSHOT</feature.reservation.version>
+    <feature.sfc.version>0.1.2-SNAPSHOT</feature.sfc.version>
+    <feature.snbi.version>1.1.2-SNAPSHOT</feature.snbi.version>
+    <feature.snmp4sdn.version>0.2.2-SNAPSHOT</feature.snmp4sdn.version>
+    <feature.sxp.version>1.1.2-SNAPSHOT</feature.sxp.version>
+    <feature.tcpmd5.version>1.1.2-SNAPSHOT</feature.tcpmd5.version>
+    <feature.topoprocessing.version>0.0.3-SNAPSHOT</feature.topoprocessing.version>
+    <feature.tsdr.version>1.0.2-SNAPSHOT</feature.tsdr.version>
+    <feature.ttp.version>0.1.2-SNAPSHOT</feature.ttp.version>
+    <feature.usc.version>1.0.2-SNAPSHOT</feature.usc.version>
+    <feature.vpnservice.version>0.1.2-SNAPSHOT</feature.vpnservice.version>
+    <feature.vtn-manager.version>0.3.2-SNAPSHOT</feature.vtn-manager.version>
+    <feature.yangtools.version>0.7.2-SNAPSHOT</feature.yangtools.version>
     <junit.version>4.8.1</junit.version>
-    <karaf.branding.version>1.1.1-Lithium-SR1</karaf.branding.version>
+    <karaf.branding.version>1.1.2-SNAPSHOT</karaf.branding.version>
     <nexusproxy>http://nexus.opendaylight.org/content</nexusproxy>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <snmp.plugin.version>1.0.1-Lithium-SR1</snmp.plugin.version>
+    <snmp.plugin.version>1.0.2-SNAPSHOT</snmp.plugin.version>
     <!-- Keep this list sorted alphabetically please -->
   </properties>
   <modules>
